# wordsmith

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindLibMagic.cmake  FindLibZip.cmake
src/: main.cpp  tracker.cpp  tracker.h  utility.cpp  utility.h
